route_tables.tf
resource "aws_route_table" "this_public_route" {
  vpc_id = aws_vpc.this_vpc.id

  tags = {
    Name = "${var.environment}-public-rt"
  }
}

resource "aws_route_table" "this_private_route" {
  vpc_id = aws_vpc.this_vpc.id

  tags = {
    Name = "${var.environment}-private-rt"
  }
}

resource "aws_route" "this_public_igw" {
  route_table_id         = aws_route_table.this_public_route.id
  gateway_id             = aws_internet_gateway.this_igw.id
  destination_cidr_block = "0.0.0.0/0"
  depends_on             = [aws_internet_gateway.this_igw]
}

resource "aws_route" "this_private_nat" {
  route_table_id         = aws_route_table.this_public_route.id
  nat_gateway_id         = aws_nat_gateway.this_nat_gw.id
  destination_cidr_block = "0.0.0.0/0"
  depends_on             = [aws_nat_gateway.this_nat_gw]
}

resource "aws_route_table_association" "this_public_route_assoc" {
  count          = length(var.public_subnets)
  subnet_id      = element(aws_subnet.this_public_subnets.*.id, count.index)
  route_table_id = aws_route_table.this_public_route.id
}

resource "aws_route_table_association" "this_private_route_assoc" {
  count          = length(var.private_subnets)
  subnet_id      = element(aws_subnet.this_private_subnets.*.id, count.index)
  route_table_id = aws_route_table.this_private_route.id
}
